# readless

./: .gitignore  .mcp.json  CLAUDE_EXAMPLE.md  LICENSE  README.md  README.zh.md  config.example.yaml  install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
commands/: setup.md
hooks/: readless_hook.py  readless_stop.py
src/readless/: config.py  hook_runner.py  logger.py  server.py  setkey.py  throttle.py  tts.py
tests/: test_throttle.py
